--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://canigetcentrelink.com.au">
 	<meta property="og:title" content="Accessing Centrelink during COVID-19">
 	<meta property="og:description" content="A simple step-by-step guide">
-    <meta property="og:image" content="https://canigetcentrelink.com.au/share.png">
+    <meta property="og:image" content="/share.png">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;700&display=hide" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<style>
