--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@ a.download  {
 margin:.5rem 0;
 display:none;
 border:2px solid #0D0B0B;
-padding:8px;
-font-size:12px;
+padding:.75rem;
 text-decoration:none;
 text-transform:uppercase;
 transition:background .25s}
@@ -315,7 +314,7 @@ display:block}
 
 a.download:hover {
 color:#fff;
-background:#999}
+background:#0D0B0B}
 
 .reset {
 font-size:.75rem}
@@ -450,6 +449,8 @@ margin-bottom:0}
                     <li><b>Parenting Payment</b> if you are a young child's main carer</li> 
                 </ol>
 
+                <p><b>Note</b>: anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> which is an <b>extra $550 a fortnight</b> payment on top of your income support payment.</p>
+
                 <p>You must lodge your intention to claim <b>before April 13</b> to receive the first of two $750 one-off economic support payments.</p>
 
                 <p>Go to <a href="https://my.gov.au/">myGov</a> to log in and get started.</p>
@@ -507,13 +508,15 @@ margin-bottom:0}
 
                 <div class="flag">
 
-                    <p><b>Note:</b> Mutual obligation requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment have been <b>suspended</b> until 27 April 2020.</p> 
+                    <p>Note: <b>Mutual obligation</b> requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment have been <b>suspended</b> until 27 April 2020.</p> 
 
                 </div>
 
             </div> 
 
             <div class="results" data-id="s-y-y-n" data-end="yes">
+
+                <h3>Sounds like you may be eligible for a job seeker payment.</h3>
 
                 <h3>Register your intention to Claim</h3>
 
@@ -522,14 +525,16 @@ margin-bottom:0}
                     <li><b>JobSeeker Payment</b> if you are between 22 or the <a href="https://www.servicesaustralia.gov.au/individuals/services/centrelink/age-pension/who-can-get-it">age Pension Age</a> (66 or older)</li>  
                     <li><b>Parenting Payment</b> if you are a young child's main carer</li> 
                 </ol>
+                
+                <p>Note: anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> which is an <b>extra $550 a fortnight</b> payment on top of your income support payment.</p>
 
-                <p>You must lodge your intention to claim <b>before April 13</b> to receive the first of two $750 one-off economic support payments. You will receive this payment if you are <a href="https://www.servicesaustralia.gov.au/individuals/news/750-one-economic-support-payment">receiving an eligible payment</a> between <b>12 March</b> and <b>13 April 2020</b>.</p>
+                <p>You must lodge your intention to claim <b>before April 13</b> to receive the first of two $750 one-off economic support payments.</p>
 
                 <p>Go to <a href="https://my.gov.au/">myGov</a> to log in and get started.</p>
 
                 <div class="flag">
 
-                    <p><b>Note:</b> You <b>do not need</b> to give Centrelink a bank statement, employment separation certificate or letter from your employer. Just lodge your intention to claim online and Centrelink will be in touch with you if they need more information.</p> 
+                    <p>Note: You <b>do not need</b> to give Centrelink a bank statement, employment separation certificate or letter from your employer. Just lodge your intention to claim online and Centrelink will be in touch with you if they need more information.</p> 
 
                 </div>
                 
@@ -554,7 +559,7 @@ margin-bottom:0}
 
                 <div class="flag">
 
-                    <p><b>Note:</b> Mutual obligation requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment have been <b>suspended</b> until 27 April 2020.</p> 
+                    <p>Note: <b>Mutual obligation</b> requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment have been <b>suspended</b> until 27 April 2020.</p> 
 
                 </div>
 
