--- a/index.html
+++ b/index.html
@@ -164,6 +164,17 @@ margin-bottom:4rem}
 display:inline-block;
 text-align:left}
 
+.q .left span {
+display:block;
+padding-left:1rem;
+position:relative}
+
+.q .left span:before {
+content:'•';
+position:absolute;
+left:0;
+top:0}
+
 .q p.msg:after {
 content:'';
 position:absolute;
@@ -379,7 +390,7 @@ margin-bottom:0}
 
             <p>A simple step-by-step guide to see if you are <b>eligible for assistance</b>, and if so, <b>how to access it</b>.</p>
 
-            <p class="updated">updated Thursday, 2nd of April, 2020</p>
+            <p class="updated">updated Tuesday, 18th of August, 2020</p>
 
         </header>
 
@@ -389,7 +400,7 @@ margin-bottom:0}
                 <div>Start here...</div>
             </div>
 
-            <div class="q" data-id="s">
+            <div class="q" data-id="s"> 
                 <p>Are you <b>already receiving</b> a Centrelink payment?</p>
                 <p class="opts"><a>Yes</a><a>No</a></p>
             </div>  
@@ -413,11 +424,12 @@ margin-bottom:0}
                 <p>
                     As a result of COVID-19 or the economic downturn have <b>any of the following</b> happened to you:<br><br>
                     <span class="left">  
-                    • Been stood down<br>
-                    • Lost your job<br> 
-                    • Had shifts cut<br> 
-                    • Lost or reduced work to care for young children<br> 
-                    • Lost work due to self-isolation</span>
+                        <span>Been stood down</span>
+                        <span>Lost your job</span>
+                        <span>Had shifts cut</span>
+                        <span>Lost or reduced work to care for young children</span> 
+                        <span>Lost work due to self-isolation</span>
+                    </span>
                 </p>
                 <p class="opts"><a>Yes</a><a>No</a></p>
             </div> 
@@ -449,7 +461,7 @@ margin-bottom:0}
 
                 <p><b>Note</b>: anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> which is an <b>extra $550 a fortnight</b> payment on top of your income support payment.</p>
 
-                <p>You must lodge your intention to claim <b>before April 13</b> to receive the first of two $750 one-off economic support payments.</p>
+                <p>This is a temporary payment that is schedule to stop 24 September 2020. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
 
                 <p>Go to <a href="https://my.gov.au/">myGov</a> to log in and get started.</p>
 
@@ -504,14 +516,20 @@ margin-bottom:0}
 
                 <ol>
                     <li>The <b>Coronavirus supplement</b>*</li>
-                    <li><b>$750</b> one-off economic support payment(s)**</li>
                 </ol>
+
+                <p>The Coronavirus Supplement is a temporary payment. JobSeeker recipients will receive the supplement until 24 September 2020 when it is scheduled to stop. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
 
                 <p>* an additional, <b>temporary payment of $550 per fortnight</b> to people receiving certain payments. Check if you are eligible <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#cor">here</a>.</p> 
 
-                <p>** You will receive the <b>first $750 payment</b> if you are receiving an eligible payment between 12 March and 13 April 2020. Click <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#fir">here</a> to check if you are eligible. You will receive a <b>second payment</b> if you are receiving an eligible payment but are <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#sec)">not in receipt of the Coronavirus Supplement</a></p>
-
                 <p>Find out more <a href="http://ejaustralia.org.au/self-help/">here</a>.</p>
+
+                <div class="flag">
+
+                    <p>Note: <b>Mutual obligation recommenced</b> on 4 August after being temporarily paused due to COVID-19. This means that your JobSeeker payment may be cancelled if you refuse suitable work without a reasonable excuse.</p>
+
+                </div>
+
 
             </div> 
 
@@ -527,15 +545,17 @@ margin-bottom:0}
                     <li><b>Parenting Payment</b> if you are a young child's main carer</li> 
                 </ol>
                 
-                <p>Note: anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> which is an <b>extra $550 a fortnight</b> payment on top of your income support payment.</p>
+                <p>Anyone receiving these payments will receive the temporary <b>Coronavirus Supplement</b> which is an <b>extra $550 a fortnight</b> payment on top of your income support payment.</p>
 
-                <p>You must lodge your intention to claim <b>before April 13</b> to receive the first of two $750 one-off economic support payments.</p>
+                <p>The Coronavirus Supplement is a temporary payment. JobSeeker recipients will receive the supplement until 24 September 2020 when it is scheduled to stop. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
 
                 <p>Go to <a href="https://my.gov.au/">myGov</a> to log in and get started.</p>
 
+                <p>You <b>do not need</b> to give Centrelink a bank statement, employment separation certificate or letter from your employer. Just lodge your intention to claim online and Centrelink will be in touch with you if they need more information.</p> 
+
                 <div class="flag">
 
-                    <p>Note: You <b>do not need</b> to give Centrelink a bank statement, employment separation certificate or letter from your employer. Just lodge your intention to claim online and Centrelink will be in touch with you if they need more information.</p> 
+                    <p>Note: <b>Mutual obligation recommenced</b> on 4 August after being temporarily paused due to COVID-19. This means that your JobSeeker payment may be cancelled if you refuse suitable work without a reasonable excuse.</p>
 
                 </div>
                 
@@ -548,19 +568,18 @@ margin-bottom:0}
                 <p>You will <b>automatically</b> receive:</p>
 
                 <ol>
-                    <li>The <b>Coronavirus supplement</b>*</li>
-                    <li><b>$750</b> one-off economic support payment(s)**</li>
+                    <li>The <b>Coronavirus supplement</b></li>
                 </ol>
 
-                <p>* an additional, <b>temporary payment of $550 per fortnight</b> to people receiving certain payments. Check if you are eligible <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#cor">here</a>.</p> 
+                <p>The Coronavirus supplement is an additional, <b>temporary payment of $550 per fortnight</b> to people receiving certain payments. Check if you are eligible <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#cor">here</a>.</p> 
 
-                <p>** You will receive the <b>first $750 payment</b> if you are receiving an eligible payment between 12 March and 13 April 2020. Click <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#fir">here</a> to check if you are eligible. You will receive a <b>second payment</b> if you are receiving an eligible payment but are <a href="https://www.dss.gov.au/about-the-department/coronavirus-covid-19-information-and-support#sec)">not in receipt of the Coronavirus Supplement</a></p>
+                <p>It is scheduled to stop 24 September 2020. Beyond this date, the Coronavirus Supplement will be available at $250 per fortnight until 31 December 2020.</p>
 
                 <p>Find out more <a href="http://ejaustralia.org.au/self-help/">here</a>.</p>
 
                 <div class="flag">
 
-                    <p>Note: <b>Mutual obligation</b> requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment have been <b>suspended</b> until 27 April 2020.</p> 
+                    <p>Note: <b>Mutual obligation</b> requirements for the JobSeeker payment, Youth Allowance as a job seeker or Parenting Payment were temporarily suspended due to COVID-19. They recommenced on 4 August 2020. That means that your JobSeeker payment may be cancelled if you refuse suitable work without a reasonable excuse.</p> 
 
                 </div>
 
