--- a/index.html
+++ b/index.html
@@ -374,12 +374,37 @@ margin-bottom:0}
     footer span {
     display:none}
 
+    
+
 }
+
+.languages {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.languages a {
+        padding: 0.7em;
+    }
+
+    .languages a:hover {
+        color: #22B85C;
+        text-decoration: none;
+    }
+
+    .languages .activeLink {
+        text-decoration: none;
+        color: #22B85C;
+    }
 
     </style>
 </head>
 <body>
+<div class="languages">
 
+<a href="index.html" class="activeLink">English</a> <a href="index(es).html">Español</a> <a href="index(dik).html">Thuɔŋjäŋ</a> <a href="index(zh-Hans).html">简体中文</a> <a href="index(vi).html">Tiếng Việt</a> <a href="index(ar).html">اَلْعَرَبِيَّةُ</a>
+
+</div>
     <div id="page">
 
         <header>
@@ -441,7 +466,7 @@ margin-bottom:0}
 
             <div class="q" data-id="s-y-y">
 
-                <p class="msg"><b>Note</b>: If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment. This is a government payment to allow employers to keep on employees and pay them at least <b>$1500</b> per fortnight. Speak to your employer about this option.<br><br> If you are <b>self-employed</b> you may also be eligible. <a href="https://www.ato.gov.au/general/gen/JobKeeper-payment/?fbclid=IwAR1Rk2A-vSqMI2E5EVqNqLU8GE3t-WF2Qb7n1PHhgChOn5lkHOu0UPGwg4k">Find out more here</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b>.</p>
+                <p class="msg"><b>Note</b>: If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment. This is a government payment to allow employers to keep on employees and pay them at least <b>$1500</b> per fortnight. Speak to your employer about this option.<br><br> If you are <b>self-employed</b> you may also be eligible. <a href="https://www.ato.gov.au/general/JobKeeper-payment/">Find out more here</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b>.</p>
 
                 <p>Are you <b>already receiving</b> a JobSeeker (formerly Newstart) or a Youth Allowance job seeker payment?</p>
                 <p class="opts"><a>Yes</a><a>No</a></p>
@@ -467,7 +492,7 @@ margin-bottom:0}
 
                 <div class="flag">
 
-                    <p>If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment. This is a government payment to allow employers to keep on employees and pay them at least $1500 per fortnight. Speak to your employer about this option.<br><br> If you are <b>self-employed</b> you may also be eligible. <a href="https://www.ato.gov.au/general/gen/JobKeeper-payment/?fbclid=IwAR1Rk2A-vSqMI2E5EVqNqLU8GE3t-WF2Qb7n1PHhgChOn5lkHOu0UPGwg4k">Find out more here</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b> and should register your intention to claim.</p>
+                    <p>If you have <b>lost your job</b> or been <b>stood down</b> on or after <b>1 March 2020</b> your employer may be eligible for the "JobKeeper" payment. This is a government payment to allow employers to keep on employees and pay them at least $1500 per fortnight. Speak to your employer about this option.<br><br> If you are <b>self-employed</b> you may also be eligible. <a href="https://www.ato.gov.au/general/JobKeeper-payment/">Find out more here</a>. In the meantime, <b>you may still be eligible for a Centrelink payment</b> and should register your intention to claim.</p>
 
                     <p>You <b>do not need</b> to give Centrelink a bank statement, employment separation certificate or letter from your employer. Just lodge your intention to claim online and Centrelink will be in touch with you if they need more information.</p> 
 
